--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-photo-gallery": "^6.3.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
